header footer added
Signed-off-by: rohit236c <rohit236c@gmail.com>

--- a/views/help.hbs
+++ b/views/help.hbs
@@ -8,8 +8,9 @@
 </head>
 <body>
     {{>header}}
-    <h1>hbs file</h1>
+
+    <button>click here for help</button>
+
     {{>footer}}
-    
 </body>
 </html>
