--- a/views/404.hbs
+++ b/views/404.hbs
@@ -8,9 +8,6 @@
 </head>
 <body>
     {{>header}}
-    <a href=""></a>
-    <button><a href="/contact">click me</a></button>
-
-    {{>footer}}
+    <b>Not found </b>
 </body>
 </html>
