--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,6 +9,10 @@
 <body>
     {{>header}}
     <h1>hbs file</h1>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/contact">Contact</a>
+    <a href="/help">Help</a>
     {{>footer}}
     
 </body>
