--- a/views/help.hbs
+++ b/views/help.hbs
@@ -5,12 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-    {{>header}}
-    <a href=""></a>
-    <button><a href="/contact">click me</a></button>
-
+   <div class="container">
+    <div class="row m-2 p-2 d-flex justify-content center">
+        {{>header}}
+    </div>  
+    <div class="row m-2 p-2">
+    <button class="btn btn-primary  "><a class="text-white" href="/contact">click me</a></button>
+    </div>
+    
+    <div class="row m-2 p-2">
     {{>footer}}
+    </div>
+   </div>
+
 </body>
 </html>
