--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,15 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-    {{>header}}
-    <h1>hbs file</h1>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/contact">Contact</a>
-    <a href="/help">Help</a>
+    <header>
+          {{>header}}
+    </header>
+  
+    <div class="container">
+            <h1 class="display-4">hbs file</h1>
+                <a class="btn btn-primary p-2 m-2"href="/">Home</a>
+                <a class="btn btn-secondary p-2 m-2"href="/about">About</a>
+                <a class="btn btn-primary p-2 m-2"href="/contact">Contact</a>
+                <a class="btn btn-danger p-2 m-2"href="/help">Help</a>
+    </div>
+    
+    <footer>
     {{>footer}}
+
+    </footer>
     
 </body>
 </html>
