--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,10 +5,27 @@
     <meta name="viewport" content="width={{device-width}}, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-    {{>header}}
-    <h3>About Me</h3>
-    {{>footer}}
+    <div class="container">
+        {{>header}}
+         <h3>About Me</h3>
+         <p>
+                Lorem Ipsum is simply dummy text of the 
+                printing and typesetting industry. Lorem 
+                Ipsum has been the industry's standard dummy text ever 
+                since the 1500s, when an unknown printer took a galley of type and 
+                scrambled it to make a type specimen book. It has survived not only
+                five centuries, but also the leap into electronic typesetting, remaining
+                essentially unchanged. It was popularised in the 1960s with the release 
+                of Letraset sheets containing Lorem Ipsum passages, and more recently with 
+                desktop publishing software 
+                like Aldus PageMaker including versions of Lorem Ipsum.
+         </p>
+            {{>footer}}
+    </div>
+    
 </body>
 </html>
